[package]
name = "vcv48_k"           
version = "0.2.0"          
edition = "2021"           
authors = ["Omar Ariel Vallejos <arielvallejosok@gmail.com>"]                    
description = "Motor de validación masiva VPM_VCV48"

[lib]
name = "vcv48_k"
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- Interoperabilidad con Python ---
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# --- Estructuras de Datos y Álgebra Lineal ---
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"
num-complex = "0.4"
ordered-float = "4.2"

# --- Ingesta de Datos Masivos ---
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
fitsio = "0.21.9"
memmap2 = "0.7"
chrono = "0.4"

# --- Rendimiento y Paralelismo ---
rayon = "1.11"
lazy_static = "1.4"
num_cpus = "1.16"
crossbeam = "0.8"
rand = "0.8"

# --- Análisis de Frecuencias y Estadística ---
rustfft = "6.0"
statrs = "0.16"
approx = "0.5"

# --- Utilidades ---
itertools = "0.10"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
rpath = true

# ⚠️ CRUCIAL
[features]
default = ["pyo3"]
pyo3 = []